--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fg-tool",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "FRONT-END TOOL",
   "author": "gongwen <gongwen_1@163.com>",
   "private": true,
@@ -21,6 +21,7 @@
     "codemirror": "^5.49.2",
     "element-ui": "2.12.0",
     "md5": "^2.2.1",
+    "upload-oss-cropper": "^1.0.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.4",
     "vuex": "^3.0.1"
