--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "^6.23.0",
     "base64-url": "^2.2.1",
     "codemirror": "^5.49.2",
+    "compressorjs": "^1.0.6",
     "element-ui": "2.12.0",
     "md5": "^2.2.1",
     "upload-oss-cropper": "^1.0.9",
