--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "element-ui": "2.12.0",
     "html2canvas": "^1.0.0-rc.5",
     "md5": "^2.2.1",
+    "psd": "^3.2.0",
     "upload-oss-cropper": "^1.0.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.4",
