--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,19 @@
-.DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
-selenium-debug.log
-.svn
-/src/pages/test.vue
+# dependencies
+node_modules
 
+# logs
+npm-debug.log
 
-# Editor directories and files
+# Nuxt build
+.nuxt
+
+# Nuxt generate
+dist
 .idea
 .vscode
+.svn
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-/static/model/
-/static/video/
+/src/static/model/
