--- a/package.json
+++ b/package.json
@@ -1,107 +1,61 @@
 {
   "name": "fg-tool",
-  "version": "1.0.6",
   "description": "FRONT-END TOOL",
   "author": "gongwen <gongwen_1@163.com>",
+  "version": "2.0.1",
   "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENVINGS=DEV webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "test": "cross-env NODE_ENVINGS=TST webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "build": "cross-env NODE_ENVINGS=PRO node build/build.js",
-    "testBuild": "cross-env NODE_ENVINGS=TST node build/build.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "lint": "eslint --fix --ext .js,.vue src"
+  "projectconfig": {
+    "website": {
+      "dev": "",
+      "pro": ""
+    }
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": 3081
+    }
   },
   "dependencies": {
-    "axios": "^0.15.3",
-    "babel-polyfill": "^6.23.0",
-    "base64-url": "^2.2.1",
-    "codemirror": "^5.49.2",
+    "@gauseen/nuxt-proxy": "^1.0.1",
+    "@nuxt/typescript-runtime": "0.3.8",
+    "@nuxtjs/axios": "5.9.3",
+    "axios": "^0.19.1",
+    "base64-url": "^2.3.3",
+    "codemirror": "^5.55.0",
     "compressorjs": "^1.0.6",
-    "d3": "^5.15.0",
-    "element-ui": "2.12.0",
+    "d3": "^5.16.0",
+    "element-ui": "^2.13.0",
     "html2canvas": "^1.0.0-rc.5",
     "md5": "^2.2.1",
-    "psd": "^3.2.0",
-    "upload-oss-cropper": "^1.0.9",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.4",
-    "vuex": "^3.0.1"
+    "nuxt": "2.11.0",
+    "nuxt-property-decorator": "2.5.0",
+    "qs": "^6.9.1",
+    "vuex-class": "0.3.2"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENVS=DEV nuxt-ts",
+    "test": "cross-env NODE_ENVS=TST nuxt-ts",
+    "build": "cross-env NODE_ENVS=PRO nuxt-ts build",
+    "testbuild": "cross-env NODE_ENVS=TST nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
+    "lint:css": "stylelint **/*.{html,vue,css,sass,scss}"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.2.0",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "echarts": "^4.2.1",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.17.1",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.4",
-    "jest-serializer-vue": "^0.3.0",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.1.0",
-    "sass-resources-loader": "^1.3.3",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.7.0",
-    "shelljs": "^0.7.6",
-    "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@nuxt/typescript-build": "0.5.6",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "cross-env": "^6.0.3",
+    "eslint": "^6.8.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "stylelint": "^13.6.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.17.2",
+    "stylelint-webpack-plugin": "^2.0.0",
+    "webpack-spritesmith": "^1.1.0"
+  }
 }
