--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/axios": "5.9.3",
     "axios": "^0.19.1",
     "base64-url": "^2.3.3",
+    "clipboard-polyfill": "^3.0.0-pre5",
     "codemirror": "^5.55.0",
     "compressorjs": "^1.0.6",
     "d3": "^5.16.0",
@@ -30,6 +31,7 @@
     "md5": "^2.2.1",
     "nuxt": "2.11.0",
     "nuxt-property-decorator": "2.5.0",
+    "qrcode": "^1.4.4",
     "qs": "^6.9.1",
     "vuex-class": "0.3.2"
   },
